dist/core/src/test/baseman/invalid-usage/case-param-position-1/commands/b.d.ts
import { Command } from '../../../../..';
export default class  extends Command {
    execute(foo: string, bar: string): void;
}
